fixed some layout problems

--- a/sites/InterviewManager/sass/overview.scss
+++ b/sites/InterviewManager/sass/overview.scss
@@ -193,6 +193,7 @@
       text-align: center;
       width: 750px;
       margin-bottom: 1em;
+      margin-top: 1em;
       //z-index: 1;
     }
   }
